[package]
name = "pilspector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
pretty_assertions = "1.3.0"
serde = { version = "1.0.148", features = ["serde_derive"] }
serde_json = { version = "1.0.89", features = ["preserve_order"] }
serde_path_to_error = "0.1.8"
tempdir = "0.3.7"
